Fix german langauge tags; update other files; fix #319, fix #296

--- a/SCANassets/Resources/Localization/de/OtherText.cfg
+++ b/SCANassets/Resources/Localization/de/OtherText.cfg
@@ -1,6 +1,6 @@
 ﻿Localization
 {
-	de
+	de-de
 	{
 		#autoLOC_SCANsat_Analyze		= Daten Analysieren
 		#autoLOC_SCANsat_StartScan		= Scan Starten
@@ -22,5 +22,14 @@
 		#autoLOC_SCANsat_AltitudeBest		= Höhe (ideal): <<1>>km\n
 		#autoLOC_SCANsat_AltitudeMax		= Höhe (max): <<1>>km\n
 		#autoLOC_SCANsat_FOV			= Sichtwinkel: <<1>>
+		#autoLOC_SCANsat_MapProjection = Projektion
+		#autoLOC_SCANsat_MapType = Kertentyp
+		#autoLOC_SCANsat_MapResource = Ressource
+		#autoLOC_SCANsat_MapBody = Himmelskörper
+		#autoLOC_SCANsat_GeneralSettings = Allgemeine Einstellungen
+		#autoLOC_SCANsat_BackgroundSettings = Hintergrund-Einstellungen
+		#autoLOC_SCANsat_ResourceSettings = Ressourcen-Einstellungen
+		#autoLOC_SCANsat_DataManagement = Daten-Management
+		#autoLOC_SCANsat_ColorManagement = Farb-Management
 	}
 }
