--- a/SCANassets/Resources/Localization/zh-cn/OtherText.cfg
+++ b/SCANassets/Resources/Localization/zh-cn/OtherText.cfg
@@ -27,7 +27,7 @@
 		#autoLOC_SCANsat_MapResource		= 资源
 		#autoLOC_SCANsat_MapBody		= 天体
 		#autoLOC_SCANsat_GeneralSettings	= 全局设置
-		#autoLOC_SCANsat_BackgroundSettings	= 背景设置
+		#autoLOC_SCANsat_BackgroundSettings	= 后台设置
 		#autoLOC_SCANsat_ResourceSettings	= 资源设置
 		#autoLOC_SCANsat_DataManagement		= 数据管理
 		#autoLOC_SCANsat_ColorManagement	= 颜色管理
